@@ -61,7 +61,8 @@ typedef enum {
         Protocol_GPS,
         Protocol_RADIUS,
         Protocol_MEMCACHE,
-        Protocol_WEBSOCKET
+        Protocol_WEBSOCKET,
+        Protocol_REDIS
 } Protocol_Type;
 
 
@@ -83,6 +84,7 @@ int check_postfix_policy(Socket_T);
 int check_pop(Socket_T);
 int check_smtp(Socket_T);
 int check_ssh(Socket_T);
+int check_redis(Socket_T);
 int check_rdate(Socket_T);
 int check_rsync(Socket_T);
 int check_tns(Socket_T);
