@@ -4,6 +4,9 @@
 
 Version 5.10
 
+New: redis protocol test added. Usage:
+    if failed port 6379 protocol redis then alert
+
 Fixed: Issue #104: Keep umask Monit was started with when executing
 start/stop/restart programs, check programs and creating files.
 
